--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   animated_text_kit: ^4.2.2
   table_calendar: ^3.0.9
+  firebase_core: ^2.20.0
+  cloud_firestore: ^4.12.1
+  firebase_auth: ^4.12.0
+
 
 dev_dependencies:
   flutter_test:
