--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   firebase_core: ^2.20.0
   cloud_firestore: ^4.12.1
   firebase_auth: ^4.12.0
+  marquee: ^2.2.3
+
 
 dev_dependencies:
   flutter_test:
